src/css/styles.css
/*General*/

* {
	position: relative;
}

.my-container {
	text-align: center;
}

/*Layout*/

.my-container {
	margin: 2em 1em;
}

/*Search*/

#search {
	display: inline-block;
}

.my-searchbar {
	margin-top: 2em;
}

.my-submit-container {
	display: block;
}


.my-searchbar input {
	text-align: left;
}

/*Result*/

.result-section {
	transition: 500ms ease-in-out all;
	/*transition: 250ms ease-in-out transform;*/
	display: inline-block;
	position: absolute;
	top: 225px;
	left: 0;
	right: 0;
}

.result-image {
	max-width: 18em;
}

.result-nav {
	display: inline-block;
}

.btn-next {
	background-color: rgba(255, 255, 255, 0.54);
}

.btn-next-link {
	max-width: 7.3em;
	padding: 0 5px;
	left: 5px;
}

/*Animations*/

.result-section.ng-enter, .result-section.ng-leave.ng-leave-active {
	transition: 250ms ease-in-out all;
	opacity: 0;
}

.result-section.ng-enter {
	transform: translateX(-100%);
}

.result-section.ng-enter.ng-enter-active, .result-section.ng-leave {
	opacity: 1;
}

.result-section.ng-leave.ng-leave-active {
	transform: translateX(100%);
}

/*Media Queries*/

@media screen and (min-width: 404px){
	.my-submit-container {
		display: inline-block;
		position: absolute;
		top: 5px;
		bottom: 0px;
	}

	.result-image {
		max-width: 25em;
	}
	.btn-next {
		background-color: transparent;
	}
}

@media screen and (min-width: 552px){

	.btn-next-link {
		left: 0;
	}
}

@media screen and (min-width: 686px){
	

	.btn-next {
		display: block;
	}

	.btn-next-link {
		margin-top: 8em;
	}

	.result-image {
		margin-left: 8em;
	}
}

